rust/src/tui/render/snapshots/agent_bar__tui__render__tests__dashboard_renders_providers_table.snap
---
source: src/tui/render/mod.rs
expression: terminal.backend()
---
"┏ agent-bar ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ Dashboard ┃ Waybar ┃ History ┃ Login                         ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏PROVIDERS━━━━┓┏ Todos os providers ━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃◆ Claude  26%┃┃provider  uso            reset  custo          ┃"
"┃● Codex    1%┃┃Claude    ██░░░░░  26%   23:00  -              ┃"
"┃● Amp      0%┃┃Codex     ░░░░░░░   1%   01:28  -              ┃"
"┃             ┃┃Amp       ░░░░░░░   0%   -      -              ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┗━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" ↑↓ provider · ←→ aba · Enter detalhe · [q]uit                  "
