rust/src/tui/render/snapshots/agent_bar__tui__render__tests__dashboard_renders_with_real_cost.snap
---
source: src/tui/render/mod.rs
assertion_line: 538
expression: terminal.backend()
---
"┏ agent-bar ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ Dashboard ┃ Waybar ┃ History ┃ Login                         ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏PROVIDERS━━━━┓┏ Todos os providers ━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃◆ Claude  26%┃┃provider  uso            reset  custo          ┃"
"┃● Codex    1%┃┃Claude    ██░░░░░  26%   23:00  $2.10          ┃"
"┃● Amp      0%┃┃Codex     ░░░░░░░   1%   01:28  -              ┃"
"┃             ┃┃Amp       ░░░░░░░   0%   -      cr $4.19       ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┗━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Total hoje ~$2.10 ┛"
" ↑↓ provider · ←→ aba · Enter detalhe · [q]uit · [?] ajuda      "
