rust/src/tui/render/snapshots/agent_bar__tui__render__tests__help_overlay_renders_snapshot.snap
---
source: src/tui/render/mod.rs
assertion_line: 565
expression: terminal.backend()
---
"┏ agent-bar ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ Dashboard ┃ Waybar ┃ History ┃ Login                                         ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏PROVIDERS━━━━┓┏ Todos os providers ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃             ┃┃prov┌ agent-bar — atalhos ─────────────────┐                   ┃"
"┃             ┃┃    │           Navegacao global           │                   ┃"
"┃             ┃┃    │                                      │                   ┃"
"┃             ┃┃    │  [?] / Esc  abre/fecha esta ajuda    │                   ┃"
"┃             ┃┃    │  Tab / ->   proxima aba              │                   ┃"
"┃             ┃┃    │  Shift+Tab  aba anterior             │                   ┃"
"┃             ┃┃    │  [q]        sair                     │                   ┃"
"┃             ┃┃    │  [r]        atualizar quotas         │                   ┃"
"┃             ┃┃    │                                      │                   ┃"
"┃             ┃┃    │              Dashboard               │                   ┃"
"┃             ┃┃    │                                      │                   ┃"
"┃             ┃┃    │  up/down    selecionar provider      │                   ┃"
"┃             ┃┃    │  Enter      abrir detalhe            │                   ┃"
"┃             ┃┃    │  Esc        voltar para lista        │                   ┃"
"┃             ┃┃    │                                      │                   ┃"
"┃             ┃┃    │            Waybar Config             │                   ┃"
"┃             ┃┃    │                                      │                   ┃"
"┃             ┃┃    │  up/down    selecionar campo         │                   ┃"
"┃             ┃┃    │  Enter      editar campo             │                   ┃"
"┃             ┃┃    │  [s]        salvar configuracao      │                   ┃"
"┃             ┃┃    │                                      │                   ┃"
"┃             ┃┃    │                Login                 │                   ┃"
"┃             ┃┃    │                                      │                   ┃"
"┃             ┃┃    │  up/down    selecionar provider      │                   ┃"
"┃             ┃┃    │  Enter      iniciar login do provider│                   ┃"
"┃             ┃┃    │                                      │                   ┃"
"┃             ┃┃    └──────────────────────────────────────┘                   ┃"
"┃             ┃┃                                                               ┃"
"┃             ┃┃                                                               ┃"
"┗━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" Esc / [?] fecha ajuda                                                          "
